--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -1,23 +1,33 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary bg-opacity-75">
-    <div class="container-fluid">
+    <div class="container-fluid d-flex justify-content-between align-items-center">
+        <!-- Left: Brand -->
+        <a class="navbar-brand" href="#">Expense Tracker</a>
+
+        <!-- Right: Auth Buttons + Profile Icon -->
         <div class="d-flex align-items-center">
-            <a class="navbar-brand me-4" href="#">Expense Tracker</a>
-        </div>
-        <div class="ms-auto" *ngIf="authService.currentUser$ | async">
-            <a class="btn btn-outline-light me-2" [routerLink]="'/add'">
-                <i class="bi bi-plus-circle"></i>
-                Add Transaction
-            </a>
-            <a class="btn btn-outline-light me-2" (click)="authService.logout()">
-                <i class="bi bi-box-arrow-right me-1"></i>
-                Logout
-            </a>
-        </div>
-        <div class="ms-auto" *ngIf="!(authService.currentUser$ | async)">
-            <a class="btn btn-outline-light me-2" [routerLink]="'/login'">
-                <i class="bi bi-box-arrow-in-right me-1"></i>
-                Login
-            </a>
+            <!-- Authenticated User -->
+            <ng-container *ngIf="authService.currentUser$ | async; else loggedOut">
+                <a class="btn btn-outline-light me-2" [routerLink]="'/add'">
+                    <i class="bi bi-plus-circle"></i>
+                    Add Transaction
+                </a>
+                <a class="btn btn-outline-light me-2" (click)="authService.logout()">
+                    <i class="bi bi-box-arrow-right me-1"></i>
+                    Logout
+                </a>
+                <!-- Profile Icon -->
+                <a class="btn btn-outline-light d-flex align-items-center justify-content-center me-2" [routerLink]="'/user-profile'" style="width: 38px; height: 38px; border-radius: 50%;">
+                    <i class="bi bi-person-circle fs-5"></i>
+                </a>
+            </ng-container>
+
+            <!-- Unauthenticated User -->
+            <ng-template #loggedOut>
+                <a class="btn btn-outline-light me-2" [routerLink]="'/login'">
+                    <i class="bi bi-box-arrow-in-right me-1"></i>
+                    Login
+                </a>
+            </ng-template>
         </div>
     </div>
 </nav>
