--- a/src/app/components/footer/footer.html
+++ b/src/app/components/footer/footer.html
@@ -1,6 +1,10 @@
 <div class="container">
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-        <p class="col-md-4 mb-0 text-body-secondary">{{ currentYear }}</p>
-        <p class="col-md-4 mb-0 text-body-secondary text-end ms-auto">&copy; 2025 Oladimeji Williams</p>
+        <div class="col-md-6 text-start">
+            <p class="mb-0 text-body-secondary">&copy; {{ currentYear }}</p>
+        </div>
+        <div class="col-md-6 text-end">
+            <p class="mb-0 text-body-secondary">Oladimeji Williams</p>
+        </div>
     </footer>
 </div>
