--- a/src/app/components/footer/footer.html
+++ b/src/app/components/footer/footer.html
@@ -1,10 +1,9 @@
-<div class="container">
-    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-        <div class="col-md-6 text-start">
+<!-- Responsive Full-width Footer -->
+<footer class="bg-light border-top py-3 px-3 w-100">
+    <div class="container-fluid">
+        <div class="d-flex justify-content-between align-items-center flex-wrap text-center">
             <p class="mb-0 text-body-secondary">&copy; {{ currentYear }}</p>
-        </div>
-        <div class="col-md-6 text-end">
             <p class="mb-0 text-body-secondary">Oladimeji Williams</p>
         </div>
-    </footer>
-</div>
+    </div>
+</footer>
