--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -1,33 +1,43 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary bg-opacity-75">
-    <div class="container-fluid d-flex justify-content-between align-items-center">
-        <!-- Left: Brand -->
-        <a class="navbar-brand" href="#">Expense Tracker</a>
+<!-- Responsive Full-width Navbar -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary bg-opacity-75 px-3">
+    <div class="container-fluid">
+        <!-- Brand -->
+        <a class="navbar-brand fs-4" href="#">Expense Tracker</a>
 
-        <!-- Right: Auth Buttons + Profile Icon -->
-        <div class="d-flex align-items-center">
-            <!-- Authenticated User -->
-            <ng-container *ngIf="authService.currentUser$ | async; else loggedOut">
-                <a class="btn btn-outline-light me-2" [routerLink]="'/add'">
-                    <i class="bi bi-plus-circle"></i>
-                    Add Transaction
-                </a>
-                <a class="btn btn-outline-light me-2" (click)="authService.logout()">
-                    <i class="bi bi-box-arrow-right me-1"></i>
-                    Logout
-                </a>
-                <!-- Profile Icon -->
-                <a class="btn btn-outline-light d-flex align-items-center justify-content-center me-2" [routerLink]="'/user-profile'" style="width: 38px; height: 38px; border-radius: 50%;">
-                    <i class="bi bi-person-circle fs-5"></i>
-                </a>
-            </ng-container>
+        <!-- Toggler for small screens -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarButtons">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-            <!-- Unauthenticated User -->
-            <ng-template #loggedOut>
-                <a class="btn btn-outline-light me-2" [routerLink]="'/login'">
-                    <i class="bi bi-box-arrow-in-right me-1"></i>
-                    Login
-                </a>
-            </ng-template>
+        <!-- Collapsible content -->
+        <div class="collapse navbar-collapse justify-content-end" id="navbarButtons">
+            <div class="d-flex align-items-center flex-wrap gap-2">
+                <!-- Authenticated -->
+                <ng-container *ngIf="authService.currentUser$ | async; else loggedOut">
+                    <a class="btn btn-outline-light" [routerLink]="'/add'">
+                        <i class="bi bi-plus-circle me-1"></i>
+                        <span class="d-none d-sm-inline">Add Transaction</span>
+                    </a>
+                    <a class="btn btn-outline-light" (click)="authService.logout()">
+                        <i class="bi bi-box-arrow-right me-1"></i>
+                        <span class="d-none d-sm-inline">Logout</span>
+                    </a>
+                    <!-- Profile Icon -->
+                    <a class="btn btn-outline-light d-flex align-items-center justify-content-center rounded-circle"
+                       [routerLink]="'/user-profile'"
+                       style="width: 2.5rem; height: 2.5rem;">
+                        <i class="bi bi-person-circle fs-5"></i>
+                    </a>
+                </ng-container>
+
+                <!-- Unauthenticated -->
+                <ng-template #loggedOut>
+                    <a class="btn btn-outline-light" [routerLink]="'/login'">
+                        <i class="bi bi-box-arrow-in-right me-1"></i>
+                        <span class="d-none d-sm-inline">Login</span>
+                    </a>
+                </ng-template>
+            </div>
         </div>
     </div>
 </nav>
